# Latex-Figure-Integration

./: .gitignore  README.md  pyproject.toml
notebooks/: figure1.ipynb
src/general/: data_handling.py  fit_functions.py  paper.mplstyle  plotting.py
