[project]
name = "entanglement_snv"
version = "0.1.0"
description = "Data and Analysis repository for MVP entanglement project."
authors = [
    { name = "Christopher Waas", email = "c.waas@tudelft.nl" },
    { name = "Hans Beukers", email = "h.k.c.beukers@tudelft.nl" }
]
dependencies = [
    "bokeh>=3.6.0",
    "dask>=2024.9.1",
    "jupyter>=1.1.1",
    "lmfit>=1.3.2",
    "multiprocess>=0.70.17",
    "pyqt5>=5.15.9",
    "pyqt5-tools>=5.15.9.3.3",
    "tqdm>=4.66.5",
    "xarray>=2024.9.0",
    "quantify-core>=0.7.7",
    "numpy>=2.1.2",
    "matplotlib>=3.9.2",
    "svgwrite>=1.4.3",
    "lxml>=5.3.0",
    "statsmodels>=0.14.4",
    "pymc>=5.15.0",
    "ggpp>=1.1.2",
    "pytensor>=2.20.0",
    "numdifftools>=0.9.41",
    "qutip>=5.0.4",
    "seaborn>=0.13.2",
    "names>=0.3.0",
    "pypdf2>=3.0.1",
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []
universal = true

[tool.rye.workspace]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/entanglement"]

[tool.ruff]
extend-include = ["*.ipynb"]
fix = true

[tool.ruff.lint]
select = ["I"]
